# block_game

./: Cargo.toml
assets/debug/: cube.blend  cube.mtl
src/: chunk.rs  main.rs  mesh.rs
