[package]
name = "block_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.11.0"
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
bevy_window = "0.5.0"
bevy_diagnostic = "0.5.0"
bevy_tasks = "0.5.0"
bevy_winit = { version = "0.5.0", features = ["wayland"] }
